Update README with running instructions for Eclipse
Added steps to run the project in Eclipse IDE.