@@ -1,2 +1,12 @@
 # To-Do-List-JavaFX-SpringBoot-
-I made a to do list with javaFX and springboot. This is my first springboot project.
+I made a to do list using javaFX and springboot. This is my first springboot project.
+
+Steps to run:
+- Open Eclipse IDE
+- Install the Spring dev tools extension in Eclipse
+- Import the project into your workspace (Import existing maven project)
+- Right-cick on the project and go to Run as -> Run configurations.
+  in the arguments tab, add the VM argument
+  --module-path "C:\path\to\javafx25\lib" --add-modules javafx.controls,javafx.graphics,javafx.fxml
+- Apply and close
+- Right-click on the project and run as Spring Boot App
